--- a/index.html
+++ b/index.html
@@ -7,10 +7,41 @@
    <link rel="stylesheet" href="CSS/master.css">
    <link rel="stylesheet" href="CSS/normalize.css">
    <link rel="stylesheet" href="CSS/all.min.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com/">
-   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+   <!-- Google Fonts -->
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&#038;display=swap" rel="stylesheet" />
    <title>Elzero</title>
 </head>
 <body>
+   <header>
+      <div class="container">
+         <a href="" class="logo">Elzero</a>
+         <ul class="links">
+            <li><a href="#" >Articles</a></li>
+            <li><a href="#" >Gallary</a></li>
+            <li><a href="#" >Features</a></li>
+            <li><a href="#" >Other Links</a></li>
+         </ul>
+         <div class="mega-menu">
+            <div class="img"> <img src="pictures/megamenu.png" alt="image"></div>
+            <ul>
+               <li><a href="#testemonials"><i class="far fa-comments fa-fw"></i>Testemonials</a></li>
+               <li><a href="#team-members"><i class="far fa-user fa-fw"></i>Team Members</a></li>
+               <li><a href="#services"><i class="far fa-building fa-fw"></i>Services</a></li>
+               <li><a href="our-skills"><i class="far fa-check-circle fa-fw"></i>Our Skills</a></li>
+               <li><a href="#how-it-works"><i class="far fa-clipboard fa-fw"></i>How It Works</a></li>
+            </ul>
+            <ul>
+               <li></li>
+               <li></li>
+               <li></li>
+               <li></li>
+               <li></li>
+               <li></li>
+            </ul>
+         </div>
+      </div>
+   </header>
 </body>
 </html>
