--- a/index.html
+++ b/index.html
@@ -19,29 +19,40 @@
          <a href="" class="logo">Elzero</a>
          <ul class="links">
             <li><a href="#" >Articles</a></li>
-            <li><a href="#" >Gallary</a></li>
+            <li><a href="#" >Gallery</a></li>
             <li><a href="#" >Features</a></li>
-            <li><a href="#" >Other Links</a></li>
+            <li>
+               <a href="#" >Other Links</a>
+               <div class="mega-menu">
+                  <img src="pictures/megamenu.png" alt="image">
+                  <ul>
+                     <li><a href="#testemonials"><i class="far fa-comments fa-fw"></i>Testemonials</a></li>
+                     <li><a href="#team-members"><i class="far fa-user fa-fw"></i>Team Members</a></li>
+                     <li><a href="#services"><i class="far fa-building fa-fw"></i>Services</a></li>
+                     <li><a href="our-skills"><i class="far fa-check-circle fa-fw"></i>Our Skills</a></li>
+                     <li><a href="#how-it-works"><i class="far fa-clipboard fa-fw"></i>How It Works</a></li>
+                  </ul>
+                  <ul>
+                     <li><a href="#Events"><i class="far fa-calendar-alt fa-fw"></i>Events</a></li>
+                     <li><a href="#Pricing"><i class="fas fa-server fa-fw"></i>Pricing Plans</a></li>
+                     <li><a href="#Top-Videos"><i class="far fa-play-circle fa-fw"></i>Top Videos</a></li>
+                     <li><a href="Stats"><i class="far fa-chart-bar fa-fw"></i>Stats</a></li>
+                     <li><a href="#Discount"><i class="fas fa-percent fa-fw"></i>Request A Discount</a></li>
+                  </ul>
+               </div>
+            </li>
          </ul>
-         <div class="mega-menu">
-            <div class="img"> <img src="pictures/megamenu.png" alt="image"></div>
-            <ul>
-               <li><a href="#testemonials"><i class="far fa-comments fa-fw"></i>Testemonials</a></li>
-               <li><a href="#team-members"><i class="far fa-user fa-fw"></i>Team Members</a></li>
-               <li><a href="#services"><i class="far fa-building fa-fw"></i>Services</a></li>
-               <li><a href="our-skills"><i class="far fa-check-circle fa-fw"></i>Our Skills</a></li>
-               <li><a href="#how-it-works"><i class="far fa-clipboard fa-fw"></i>How It Works</a></li>
-            </ul>
-            <ul>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-               <li></li>
-            </ul>
-         </div>
       </div>
    </header>
+   <div class="landing">
+      <div class="container">
+         <div class="text">
+            <h1>Welcome, To Elzero World</h1>
+            <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
+         </div>
+         <img src="pictures/landing-image.png" alt="image">
+      </div>
+   </div>
+   <h2 class="main-heading">articles</h2>
 </body>
 </html>
