Created a Few Sections

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
+   <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="CSS/master.css">
@@ -18,9 +18,9 @@
       <div class="container">
          <a href="" class="logo">Elzero</a>
          <ul class="links">
-            <li><a href="#" >Articles</a></li>
-            <li><a href="#" >Gallery</a></li>
-            <li><a href="#" >Features</a></li>
+            <li><a href="#articles" >Articles</a></li>
+            <li><a href="#gallery" >Gallery</a></li>
+            <li><a href="#features" >Features</a></li>
             <li>
                <a href="#" >Other Links</a>
                <div class="mega-menu">
@@ -44,6 +44,7 @@
          </ul>
       </div>
    </header>
+   <!-- Start Landing -->
    <div class="landing">
       <div class="container">
          <div class="text">
@@ -51,8 +52,378 @@
             <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
          </div>
          <img src="pictures/landing-image.png" alt="image">
+         <a href="#articles" class="down-arrow">
+            <i class="fas fa-angle-double-down fa-fw"></i>
+         </a>
       </div>
    </div>
+   <!-- End Landing -->
+   <!-- Start Articles -->
+   <div class="articles" id="articles">
    <h2 class="main-heading">articles</h2>
+   <div class="container">
+      <div class="box">
+         <img src="pictures/cat-01.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-02.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-03.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-04.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-05.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-06.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-07.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+      <div class="box">
+         <img src="pictures/cat-08.jpg" alt="">
+         <div class="text">
+            <h3>Test Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+         </div>
+         <div class="more">
+            <a href="#">Read More</a>
+            <i class=" fas fa-long-arrow-alt-right"></i>
+         </div>
+      </div>
+   </div>
+   </div>
+   <!-- End Articles -->
+
+   <!-- Start Gallery -->
+   <div class="gallery" id="gallery">
+      <h2 class="main-heading">gallery</h2>
+      <div class="container">
+         <div class="box">
+            <div class="image">
+               <img src="pictures/gallery-01.png" alt="">
+            </div>
+         </div>
+         <div class="box">
+            <div class="image">
+               <img src="pictures/gallery-02.png" alt="">
+            </div>
+         </div>
+         <div class="box">
+            <div class="image">
+               <img src="pictures/gallery-03.jpg" alt="">
+            </div>
+         </div>
+         <div class="box">
+            <div class="image">
+               <img src="pictures/gallery-04.png" alt="">
+            </div>
+         </div>
+         <div class="box">
+            <div class="image">
+               <img src="pictures/gallery-05.jpg" alt="">
+            </div>
+         </div>
+         <div class="box">
+            <div class="image">
+               <img src="pictures/gallery-06.png" alt="">
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End Gallery -->
+
+   <!-- Start Features -->
+   <div class="features" id="features">
+      <h2 class="main-heading">features</h2>
+      <div class="container">
+         <div class="box">
+            <div class="img">
+               <img src="pictures/features-01.jpg" alt="image">
+            </div>
+            <div class="text">
+               <h2>quality</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+            </div>
+            <a href="#">More</a>
+         </div>
+         <div class="box">
+            <div class="img"><img src="pictures/features-02.jpg" alt="image"></div>
+            <div class="text">
+               <h2>Time</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+            </div>
+            <a href="#">More</a>
+         </div>
+         <div class="box">
+            <div class="img">
+               <img src="pictures/features-03.jpg" alt="image">
+            </div>
+            <div class="text">
+               <h2>passioin</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+            </div>
+            <a href="#">More</a>
+         </div>
+      </div>
+   </div>
+   <!-- End Features -->
+
+   <!-- Start Testemonials -->
+   <div class="testemonials" id="testemonials">
+      <h2 class="main-heading">testemonials</h2>
+      <div class="container">
+         <div class="box">
+            <img src="pictures/avatar-01.png" alt="avatar-01">
+            <h3>moahammad farag</h3>
+            <span>full stack devoloper</span>
+            <div class="rate">
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="far fa-star"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+         </div>
+         <div class="box">
+            <img src="pictures/avatar-02.png" alt="avatar-01">
+            <h3>moahammad ibrahim</h3>
+            <span>full stack devoloper</span>
+            <div class="rate">
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="far fa-star"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+         </div>
+         <div class="box">
+            <img src="pictures/avatar-03.png" alt="avatar-01">
+            <h3>Shady Nabil</h3>
+            <span>full stack devoloper</span>
+            <div class="rate">
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="far fa-star"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+         </div>
+         <div class="box">
+            <img src="pictures/avatar-04.png" alt="avatar-01">
+            <h3>ali hendawy</h3>
+            <span>full stack devoloper</span>
+            <div class="rate">
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+         </div>
+         <div class="box">
+            <img src="pictures/avatar-05.png" alt="avatar-01">
+            <h3>sheref ashraf</h3>
+            <span>full stack devoloper</span>
+            <div class="rate">
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="far fa-star"></i>
+               <i class="far fa-star"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+         </div>
+         <div class="box">
+            <img src="pictures/avatar-06.png" alt="avatar-01">
+            <h3>osama moahammad</h3>
+            <span>full stack devoloper</span>
+            <div class="rate">
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="filled fas fa-star"></i>
+               <i class="far fa-star"></i>
+               <i class="far fa-star"></i>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+         </div>
+      </div>
+   </div>
+   <!-- End Testemonials -->
+
+   <!-- Start Team -->
+   <div class="team-members" id="team-members">
+      <h2 class="main-heading">team Members</h2>
+      <div class="container">
+         <div class="box">
+            <img src="pictures/team-01.jpg" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-02.jpg" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-03.jpg" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-04.jpg" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-05.png" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-06.png" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-07.jpg" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+         <div class="box">
+            <img src="pictures/team-08.jpg" alt="team">
+            <div class="icons">
+               <a href="#"><i class="fab fa-facebook-f"></i></a>
+               <a href="#"><i class="fab fa-youtube"></i></a>
+               <a href="#"><i class="fab fa-linkedin-in"></i></a>
+               <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+               <h3>name</h3>
+               <p>simple short description</p>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End Team -->
 </body>
 </html>
