--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                      <li><a href="#testemonials"><i class="far fa-comments fa-fw"></i>Testemonials</a></li>
                      <li><a href="#team-members"><i class="far fa-user fa-fw"></i>Team Members</a></li>
                      <li><a href="#services"><i class="far fa-building fa-fw"></i>Services</a></li>
-                     <li><a href="our-skills"><i class="far fa-check-circle fa-fw"></i>Our Skills</a></li>
+                     <li><a href="#skills"><i class="far fa-check-circle fa-fw"></i>Our Skills</a></li>
                      <li><a href="#how-it-works"><i class="far fa-clipboard fa-fw"></i>How It Works</a></li>
                   </ul>
                   <ul>
@@ -425,5 +425,100 @@
       </div>
    </div>
    <!-- End Team -->
+   <!-- Start Serivces -->
+   <div class="services" id="services">
+      <h2 class="main-heading">services</h2>
+      <div class="container">
+         <div class="box">
+            <div class="icon">
+               <i class="fas fa-user-shield fa-4x"></i>
+               <h3>security</h3>
+            </div>
+            <div class="foot">
+               <a href="#">Details</a>
+            </div>
+         </div>
+         <div class="box">
+            <div class="icon">
+               <i class="fas fa-tools fa-4x"></i>
+               <h3>fixing issues</h3>
+            </div>
+            <div class="foot">
+               <a href="#">Details</a>
+            </div>
+         </div>
+         <div class="box">
+            <div class="icon">
+               <i class="fas fa-map-marked-alt fa-4x"></i>
+               <h3>location</h3>
+            </div>
+            <div class="foot">
+               <a href="#">Details</a>
+            </div>
+         </div>
+         <div class="box">
+            <div class="icon">
+               <i class="fas fa-laptop-code fa-4x"></i>
+               <h3>coding</h3>
+            </div>
+            <div class="foot">
+               <a href="#">Details</a>
+            </div>
+         </div>
+         <div class="box">
+            <div class="icon">
+               <i class="fas fa-palette fa-4x"></i>
+               <h3>Style</h3>
+            </div>
+            <div class="foot">
+               <a href="#">Details</a>
+            </div>
+         </div>
+         <div class="box">
+            <div class="icon">
+               <i class="fas fa-bullhorn fa-4x"></i>
+               <h3>markering</h3>
+            </div>
+            <div class="foot">
+               <a href="#">Details</a>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End Serivces -->
+   <!-- Start Skills -->
+   <div class="skills" id="skills">
+      <h2 class="main-heading">our skills</h2>
+      <div class="container">
+         <img src="pictures/skills.png" alt="Skills">
+         <div class="stats">
+            <div class="bar">
+               <h3>HTML</h3>
+               <div class="progress" data-progress="80%">
+                  <span style="width:80%"></span>
+               </div>
+            </div>
+            <div class="bar">
+               <h3>CSS</h3>
+               <div class="progress" data-progress="85%">
+                  <span style="width:85%"></span>
+               </div>
+            </div>
+            <div class="bar">
+               <h3>JavaSkript</h3>
+               <div class="progress" data-progress="70%">
+                  <span style="width:70%"></span>
+               </div>
+            </div>
+            <div class="bar">
+               <h3>Python</h3>
+               <div class="progress" data-progress="80%">
+                  <span style="width:80%"></span>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End Skills -->
 </body>
 </html>
