--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                      <li><a href="#how-it-works"><i class="far fa-clipboard fa-fw"></i>How It Works</a></li>
                   </ul>
                   <ul>
-                     <li><a href="#Events"><i class="far fa-calendar-alt fa-fw"></i>Events</a></li>
+                     <li><a href="#events"><i class="far fa-calendar-alt fa-fw"></i>Events</a></li>
                      <li><a href="#Pricing"><i class="fas fa-server fa-fw"></i>Pricing Plans</a></li>
                      <li><a href="#Top-Videos"><i class="far fa-play-circle fa-fw"></i>Top Videos</a></li>
                      <li><a href="Stats"><i class="far fa-chart-bar fa-fw"></i>Stats</a></li>
@@ -520,5 +520,72 @@
       </div>
    </div>
    <!-- End Skills -->
+   <!-- Start How-It-Works -->
+   <div class="work" id="how-it-works">
+      <h2 class="main-heading">how it Works</h2>
+      <div class="container">
+         <img src="pictures/work-steps.png" alt="">
+         <div class="content">
+            <div class="box">
+               <img src="pictures/work-steps-1.png" alt="">
+               <div class="text">
+                  <h3>businiss analysis</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+               </div>
+            </div>
+            <div class="box">
+               <img src="pictures/work-steps-2.png" alt="">
+               <div class="text">
+                  <h3>Architecture</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+               </div>
+            </div>
+            <div class="box">
+               <img src="pictures/work-steps-3.png" alt="">
+               <div class="text">
+                  <h3>Developement</h3>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End How-It-Works -->
+   <!-- Start Events -->
+   <div class="events" id="events">
+      <h2 class="main-heading">latest events</h2>
+      <div class="container">
+         <div class="content">
+         <img src="pictures/events.png" alt="Events">
+            <div class="count-down">
+               <div class="count">
+                  <span class="num">0-68</span>
+                  <span>days</span>
+               </div>
+               <div class="count">
+                  <span class="num">0-21</span>
+                  <span>hours</span>
+               </div>
+               <div class="count">
+                  <span class="num">0-52</span>
+                  <span>minutes</span>
+               </div>
+               <div class="count">
+                  <span class="num">0-26</span>
+                  <span>seconds</span>
+               </div>
+               <h2>Tech Masters Event 2021</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+            </div>
+         </div>
+         <div class="subscribe">
+            <form action="">
+               <input type="email" name="mail" id="mail" placeholder="your email is...">
+               <input type="submit" value="subscribe">
+            </form>
+         </div>
+      </div>
+   </div>
+   <!-- End Events -->
 </body>
 </html>
