--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
    <!-- End Skills -->
    <!-- Start How-It-Works -->
    <div class="work" id="how-it-works">
-      <h2 class="main-heading">how it Works</h2>
+      <h2 class="main-heading">how it Works ?</h2>
       <div class="container">
          <img src="pictures/work-steps.png" alt="">
          <div class="content">
@@ -553,26 +553,30 @@
    <!-- End How-It-Works -->
    <!-- Start Events -->
    <div class="events" id="events">
+      <div class="dots-up"></div>
+      <div class="dots-down"></div>
       <h2 class="main-heading">latest events</h2>
       <div class="container">
          <div class="content">
          <img src="pictures/events.png" alt="Events">
             <div class="count-down">
-               <div class="count">
-                  <span class="num">0-68</span>
-                  <span>days</span>
-               </div>
-               <div class="count">
-                  <span class="num">0-21</span>
-                  <span>hours</span>
-               </div>
-               <div class="count">
-                  <span class="num">0-52</span>
-                  <span>minutes</span>
-               </div>
-               <div class="count">
-                  <span class="num">0-26</span>
-                  <span>seconds</span>
+               <div class="time">
+                  <div class="count">
+                     <span class="num">0-68</span>
+                     <span>days</span>
+                  </div>
+                  <div class="count">
+                     <span class="num">0-21</span>
+                     <span>hours</span>
+                  </div>
+                  <div class="count">
+                     <span class="num">0-52</span>
+                     <span>minutes</span>
+                  </div>
+                  <div class="count">
+                     <span class="num">0-26</span>
+                     <span>seconds</span>
+                  </div>
                </div>
                <h2>Tech Masters Event 2021</h2>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
