--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </ul>
                   <ul>
                      <li><a href="#events"><i class="far fa-calendar-alt fa-fw"></i>Events</a></li>
-                     <li><a href="#Pricing"><i class="fas fa-server fa-fw"></i>Pricing Plans</a></li>
+                     <li><a href="#pricing"><i class="fas fa-server fa-fw"></i>Pricing Plans</a></li>
                      <li><a href="#Top-Videos"><i class="far fa-play-circle fa-fw"></i>Top Videos</a></li>
                      <li><a href="Stats"><i class="far fa-chart-bar fa-fw"></i>Stats</a></li>
                      <li><a href="#Discount"><i class="fas fa-percent fa-fw"></i>Request A Discount</a></li>
@@ -591,5 +591,63 @@
       </div>
    </div>
    <!-- End Events -->
+   <!-- Start Pricing -->
+   <div class="pricing" id="pricing">
+      <div class="dots-up"></div>
+      <div class="dots-down "></div>
+      <h2 class="main-heading">pricing plans</h2>
+      <div class="container">
+         <div class="column">
+            <div class="head">
+               <h3>basic</h3>
+               <img src="pictures/hosting-basic.png" alt="image">
+               <h2>$15</h2>
+               <span>per month</span>
+            </div>
+            <ul class="body">
+               <li>10GB HDD Space</li>
+               <li>5 Email Adresses</li>
+               <li>2 SubDomains</li>
+               <li>4 DataBases</li>
+               <li>Basic Support</li>
+            </ul>
+            <a href="#" class="foot">Choose Plan</a>
+         </div>
+         <div class="column">
+            <div class="head">
+               <h3>advansed</h3>
+               <img src="pictures/hosting-advanced.png" alt="image">
+               <h2>$25</h2>
+               <span>per month</span>
+            </div>
+            <ul class="body">
+               <li>20GB HDD Space</li>
+               <li>10 Email Adresses</li>
+               <li>5 SubDomains</li>
+               <li>8 DataBases</li>
+               <li>Advanced Support</li>
+            </ul>
+            <a href="#" class="foot">Choose Plan</a>
+         </div>
+         <div class="column">
+            <div class="head">
+               <h3>professional</h3>
+               <img src="pictures/hosting-Professional.png" alt="image">
+               <h2>$45</h2>
+               <span>per month</span>
+            </div>
+            <ul class="body">
+               <li>50GB HDD Space</li>
+               <li>20 Email Adresses</li>
+               <li>10 SubDomains</li>
+               <li>20 DataBases</li>
+               <li>Professional Support</li>
+            </ul>
+            <a href="#" class="foot">Choose Plan</a>
+         </div>
+      </div>
+   </div>
+   <!-- End Pricing -->
+   <!-- Start  -->
 </body>
 </html>
