--- a/index.html
+++ b/index.html
@@ -648,6 +648,54 @@
       </div>
    </div>
    <!-- End Pricing -->
-   <!-- Start  -->
+   <!-- Start Top videos -->
+   <div class="top-videos" id="Top-Videos">
+      <h2 class="main-heading">top Videos</h2>
+      <div class="container">
+         <div class="content">
+            <div class="list">
+               <div class="info">
+                  <h3>top videos</h3>
+                  <i class="fas fa-random"></i>
+               </div>
+               <ul>
+                  <li>
+                     how to create a sub domain
+                     <span>05:18</span>
+                  </li>
+                  <li>
+                     playing with the dns
+                     <span>03:18</span>
+                  </li>
+                  <li>
+                     how to monitor your website
+                     <span>04:16</span>
+                  </li>
+                  <li>
+                     uncharted beating the last boss
+                     <span>07:48</span>
+                  </li>
+                  <li>
+                     Ys Oath In Felghana Overview
+                     <span>03:12</span>
+                  </li>
+                  <li>
+                     everything about virtual hosts
+                     <span>05:18</span>
+                  </li>
+                  <li>
+                     Ys Series All Games Ending
+                     <span>08:10</span>
+                  </li>
+               </ul>
+            </div>
+            <div class="vid">
+               <img src="pictures/video-preview.jpg" alt="video">
+               <p>everything about virtual hosts</p>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- End Top videos -->
 </body>
 </html>
